cmake_minimum_required(VERSION 3.24)
project(untitled)

set(CMAKE_CXX_STANDARD 17)

add_executable(untitled smart_pointer.cpp smart_pointer.cpp smart_pointer.cpp auto.cpp reference_variable.cpp reference_variable.h electric_car.cpp sort.cpp remove.cpp enum_class.cpp cart.cpp enum_type.cpp while_vector.cpp for_map.cpp iterator_without_for.cpp main.cpp main.cpp control.cpp ../../AppData/Roaming/JetBrains/CLion2022.3/plugins/activity-tracker/hello.c function_overloading.cpp stl_lambda.cpp stl_lambda2.cpp)
